--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/payment_system?createDatabaseIfNotExist=true
 # Username and password
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 # Show or not log for each sql query
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
 # Using "create" will delete and recreate the tables every time the project is started
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
